fixes issues on smaller devices

--- a/style.css
+++ b/style.css
@@ -43,12 +43,14 @@ body {
   text-align: center;
   align-items: center;
   margin-top: 10vh;
+  list-style: none;
 }
 #navbar ul li {
   padding: 1rem 0;
   width: 100%;
   margin-bottom: 1rem;
   background: #152642;
+  list-style: none;
 }
 #navbar ul li a {
   padding: 1rem 2rem;
@@ -281,4 +283,97 @@ input:checked + .slider:before {
 }
 .form > div > button {
   margin: 1rem 2rem;
+}
+
+@media (max-width: 970px) and (min-width: 710px) {
+  #navbar {
+    width: 25vw;
+  }
+  #content {
+    width: 75vw;
+  }
+  #content .container {
+    padding-left: 2rem;
+  }
+  #content .title {
+    margin-left: 2rem;
+  }
+  #content .container table tbody tr td {
+    border-bottom: 1px dotted gray;
+  }
+
+  .btn {
+    display: block;
+    margin-bottom: 1rem;
+  }
+}
+
+@media (max-width: 700px) {
+  #navbar {
+    display: grid;
+    width: 100vw;
+    height: 20vh;
+    top: 0;
+    left: 0;
+    position: fixed;
+    overflow: auto;
+    grid-template-areas:
+      "heading  heading heading"
+      " list  list list";
+  }
+  #navbar h1 {
+    grid-area: heading;
+  }
+  #navbar ul {
+    grid-area: list;
+    display: flex;
+    flex-direction: row;
+    margin-top: 0;
+    height: 10vh;
+    font-size: 0.7rem;
+  }
+  #navabr ul li {
+    margin: 0;
+    padding: 0;
+    border: 1px dotted gray;
+  }
+  #navbar ul li a {
+    padding: 1rem 0rem;
+  }
+  #navbar ul .current {
+    border-bottom: 5px solid gray;
+    border-right: none;
+  }
+  #navbar ul li:hover {
+    border-right: none;
+    border-bottom: 5px solid gray;
+  }
+  #navbar ul li a i {
+    display: none;
+  }
+
+  #content {
+    display: block;
+    margin-top: 10rem;
+    overflow-x: hidden;
+    margin: 0rem 0rem;
+    margin-top: 10rem;
+    text-align: center;
+    justify-content: center;
+  }
+  #content .container {
+    margin: 2rem 0rem;
+    font-size: 0.8rem;
+  }
+  #content .container table tbody tr td {
+    padding: 1rem 0rem;
+  }
+  #content .container table tbody tr .show-detail,
+  #content .container table tbody tr .btn-remove {
+    display: none;
+  }
+
+  #content .container table {
+    margin: 2rem 0rem;
+  }
 }
